# chatcli

./: .gitignore  MANIFEST.in  README.md  config.example.yaml  pyproject.toml  requirements-reverse.txt  requirements.txt
chatcli/: __init__.py  __main__.py  agent.py  agent_compression.py  agent_output.py  agent_session.py  agent_tool_display.py  agent_tool_preview.py  agent_tool_summary.py  agent_tools.py  auto_requests.py  checkpoint.py  child_records.py  child_state.py  child_windows.py  config.py  context.py  evolve.py  interactive.py  main.py  memory.py  orchestrate.py  permissions.py  reverse_prompt.py  skills.py  ui.py  ui_commands.py  ui_dashboard.py  ui_reverse.py  ui_work.py  work_prompts.py  worklog.py
chatcli/ida_scripts/: README.md  __init__.py  chatcli_ai_apply.py  chatcli_ai_context.py
chatcli/providers/: __init__.py  anthropic.py  base.py  openai.py  text_tools.py
chatcli/remote/: __init__.py  agent_b64.txt  analysis_plans.py  behavior_hypotheses.py  deploy_remote.ps1  gen_deploy.py  guest_client.py  job_runner.py  procmon_screen.py  result_report.py  setup_remote.ps1  ssh_client.py  standalone_agent.py  tool_inventory.py  watcher.py
chatcli/templates/: __init__.py  _malware_css.py  _report_css.py  malware_report.py  report_render.py  sample_malware.html  sample_malware.json  sample_report.html  sample_report.json
chatcli/tools/: __init__.py  _analysis_collectors.py  _http_utils.py  _ida_utils.py  _json_utils.py  _remote_client.py  _static_tool_config.py  _text_utils.py  angr_triage.py  attack_chain.py  attack_technique.py  attack_technique_plan.py  attack_technique_rules.py  base.py  bash.py  behavior_capability.py  behavior_confidence.py  behavior_hierarchy.py  behavior_requirements.py  behavior_rules.py  behavior_taxonomy.py  behavior_validator.py  binary_formats.py  binary_inspect.py  binary_patch.py  binary_search.py  command_capability.py  command_capability_rules.py  data_obfuscation.py  detection_lint.py  dns_lookup.py  edit.py  evidence_graph.py  external_static.py  ghidra.py  git_tools.py  glob.py  grep.py  ida.py  (+28 more)
server/: __init__.py  chatcli_guest_agent.py  start_agent.ps1
tests/: test_agent_loop_gating.py  test_behavior_detection.py  test_behavior_rule_integrity.py  test_guest_agent_interfaces.py  test_malware_report_render.py  test_remote_behavior_rules.py  test_remote_exec_limits.py  test_runtime_hooks.py  test_skills.py  test_standalone_guest_agent.py  test_static_tool_config.py  test_tool_output_limits.py
(+85 files in other folders)
