[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chatcli"
version = "0.1.0"
description = "Give any chat LLM local CLI superpowers — like Claude Code but model-agnostic"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.60.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
# tiktoken provides accurate token counting for context compression.
# On platforms without pre-built wheels it needs a Rust toolchain to build.
# Leave it out if you don't have Rust — chatcli falls back to a heuristic counter.
all = ["tiktoken>=0.7.0"]
tiktoken = ["tiktoken>=0.7.0"]

[project.scripts]
chatcli = "chatcli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["chatcli"]
